# drift-auditor

./: .gitignore  CONTEXT.md  LICENSE  README.md  REPRODUCE.md  REVIEW.md  SESSION_NOTES.md  adversarial_test.py  app.py  batch_audit.py  batch_audit_chatgpt.py  batch_validate.py  inspect_chatgpt.py  inspect_export.py  operator_load_comparison.txt  pyproject.toml  requirements.txt  test_chat.txt  test_chat_drift.txt  tmpclaude-32d0-cwd
.claude/: settings.local.json
.streamlit/: config.toml
adversarial_results/: boundary_respect_20260209_023812_report.json  boundary_respect_20260209_023812_report.txt  boundary_respect_20260209_023812_transcript.json  citation_decay_20260209_014116_report.json  citation_decay_20260209_014116_report.txt  citation_decay_20260209_014116_transcript.json  citation_decay_20260209_020118_report.json  citation_decay_20260209_020118_report.txt  citation_decay_20260209_020118_transcript.json  correction_persistence_20260209_025613_report.json  correction_persistence_20260209_025613_report.txt  correction_persistence_20260209_025613_transcript.json  format_compliance_20260209_022035_report.json  format_compliance_20260209_022035_report.txt  format_compliance_20260209_022035_transcript.json  hedging_persistence_20260208_221102_report.json  hedging_persistence_20260208_221102_report.txt  hedging_persistence_20260208_221102_transcript.json  hedging_persistence_20260208_222502_report.json  hedging_persistence_20260208_222502_report.txt  hedging_persistence_20260208_222502_transcript.json
batch_results/: batch_results.json  batch_summary.txt
batch_results_chatgpt/: batch_results_chatgpt.json  batch_summary_chatgpt.txt  cross_model_comparison.txt
config/: taxonomy.yaml
examples/: sample_conversation.txt  sample_system_prompt.txt
src/: __init__.py  app.py  drift_auditor.py  models.py  operator_load.py  (+4 more)
(+33 files in other folders)
